--- a/datasaver.ipynb
+++ b/datasaver.ipynb
@@ -14,24 +14,29 @@
     "import pickle\n",
     "import os\n",
     "from tqdm import tqdm\n",
-    "import argparse\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "# Get cpu, gpu or mps device for training.\n",
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")\n",
+    "print(f\"Using {device} device\")\n",
     "\n",
-    "device = torch.device('cuda:0')\n",
     "clip_model_type = \"ViT-B_32\"\n",
     "out_path = \"./data/Video_CLIP_ViT-B_32.pkl\"\n",
-    "frames_no = 10 \n",
     "csv_path = \"./Charades/Charades_v1_train.csv\"\n",
     "video_path = \"./video\" \n",
+    "frames_no = 10 \n",
+    "num_video_batch = 5\n",
     "model, preprocess = clip.load(clip_model_type, device=device, jit=False)\n",
     "\n",
-    "# load captions and video names\n",
-    "df = pd.read_csv(csv_path)\n",
-    "\n",
     "#extract frames\n",
-    "def extract_frames(video_file, frames_no):\n",
+    "def extract_frames(video_file):\n",
     "    video, audio, info = torchvision.io.read_video(video_file)\n",
     "\n",
     "    num_frames = info[\"video_fps\"] * info[\"video_duration\"]\n",
@@ -44,168 +49,63 @@
     "\n",
     "    return frames\n",
     "\n",
-    "def encode_frames(frames):\n",
+    "#encode using clip image encoder and stack the tensors alon a new dimension\n",
+    "def preprocess_frames(frames):\n",
     "\n",
     "    tensors = []\n",
     "\n",
-    "    for i in range(1,len(frames)):\n",
-    "        frames[i] = preprocess(frames[i]).unsqueeze(0).to(device)\n",
+    "    for i in range(0,len(frames)): #should this be len()+1???\n",
+    "        frame = preprocess(frames[i]).unsqueeze(0).to(device)\n",
+    "        tensors.append(frame)\n",
+    "\n",
+    "    preprocess_batch = torch.stack(tensors)\n",
+    "    preprocess_batch = preprocess_batch.to(device)\n",
     "\n",
     "\n",
+    "    # with torch.no_grad():\n",
+    "    #     image_features = model.encode_image(batch)\n",
     "\n",
+    "    return preprocess_batch\n",
+    "    \n",
+    "# Define a function to concatenate tensors \n",
+    "def CLIPtokenise(tensors):\n",
+    "    #the input tensors are 3d stacks (lets say x,y,z)\n",
+    "    #function returns a tensor of shape (x, y, sum(z)) and a list of z values\n",
     "\n",
+    "    # get the z values for each tensor\n",
+    "    z_values = [t.shape[2] for t in tensors]\n",
+    "    joined = torch.cat(tensors, dim=2)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#load videos\n",
-    "\n",
-    "\n",
-    "for i in tqdm(range(len(data))):\n",
-    "    d = data[i]\n",
-    "    img_id = d[\"image_id\"]\n",
-    "    filename = f\"./data/coco/train2014/COCO_train2014_{int(img_id):012d}.jpg\"\n",
-    "    if not os.path.isfile(filename):\n",
-    "        filename = f\"./data/coco/val2014/COCO_val2014_{int(img_id):012d}.jpg\"\n",
-    "    image = io.imread(filename)\n",
-    "    image = preprocess(Image.fromarray(image)).unsqueeze(0).to(device)\n",
     "    with torch.no_grad():\n",
-    "        prefix = clip_model.encode_image(image).cpu()\n",
-    "    d[\"clip_embedding\"] = i\n",
-    "    all_embeddings.append(prefix)\n",
-    "    all_captions.append(d)\n",
-    "    if (i + 1) % 10000 == 0:\n",
-    "        with open(out_path, 'wb') as f:\n",
-    "            pickle.dump({\"clip_embedding\": torch.cat(all_embeddings, dim=0), \"captions\": all_captions}, f)\n",
+    "            image_features = model.encode_image(joined)\n",
     "\n",
-    "with open(out_path, 'wb') as f:\n",
-    "    pickle.dump({\"clip_embedding\": torch.cat(all_embeddings, dim=0), \"captions\": all_captions}, f)\n",
+    "    #gets z values and splits them back to video stacks\n",
+    "    split = torch.split(image_features, z_values, dim=2)\n",
     "\n",
-    "print('Done')\n",
-    "print(\"%0d embeddings saved \" % len(all_embeddings))\n",
-    "return 0\n",
+    "    return split\n",
     "\n",
+    "# load captions and video names\n",
+    "df = pd.read_csv(csv_path)\n",
+    "ids = df[\"id\"]\n",
+    "\n",
+    "# loop over the ids with a batch size step\n",
+    "for i in tqdm(range(0, len(ids), num_video_batch)):\n",
+    "    # get the current batch of ids\n",
+    "    batch_ids = ids[i:i+num_video_batch]\n",
+    "\n",
+    "    batch = []\n",
+    "\n",
+    "    # loop over the batch ids\n",
+    "    for id in batch_ids:\n",
+    "        # get the video file name with the corresponding id\n",
+    "        video_file = f\"{video_path}/{id}.mp4\"\n",
+    "        batch.append(preprocess_frames(extract_frames(video_file)))\n",
+    "        \n",
+    "    tokenised_batch = CLIPtokenise(batch)\n",
+    "\n",
+    "    for j in range(len(batch_ids)):\n",
+    "        torch.save(tokenised_batch[j], f\"./video_tensors/{batch_ids[j]}.pt\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the libraries\n",
-    "import torch\n",
-    "import torchvision\n",
-    "import clip\n",
-    "\n",
-    "# Define the parameters\n",
-    "x = 10 # Number of frames per minute to extract\n",
-    "video_path = \"videos/\" # Path to the folder containing the videos\n",
-    "output_path = \"output/\" # Path to the folder where the output tensors will be saved\n",
-    "\n",
-    "# Load the CLIP model and preprocess\n",
-    "model, preprocess = clip.load(\"ViT-B/32\", device=\"cuda\")\n",
-    "\n",
-    "# Define a function to extract frames from a video\n",
-    "def extract_frames(video_file, x):\n",
-    "  # Load the video using torchvision\n",
-    "  video, audio, info = torchvision.io.read_video(video_file)\n",
-    "\n",
-    "  # Get the number of frames and the frame rate\n",
-    "  num_frames = info[\"video_fps\"] * info[\"video_duration\"]\n",
-    "  frame_rate = info[\"video_fps\"]\n",
-    "\n",
-    "  # Calculate the interval between frames to extract\n",
-    "  interval = int(frame_rate * 60 / x)\n",
-    "\n",
-    "  # Initialize an empty list to store the extracted frames\n",
-    "  frames = []\n",
-    "\n",
-    "  # Loop through the video and append every interval-th frame to the list\n",
-    "  for i in range(0, num_frames, interval):\n",
-    "    frames.append(video[i])\n",
-    "\n",
-    "  # Return the list of frames\n",
-    "  return frames\n",
-    "\n",
-    "\"\"\"# Define a function to encode frames using CLIP\n",
-    "def encode_frames(frames):\n",
-    "  # Initialize an empty list to store the encoded tensors\n",
-    "  tensors = []\n",
-    "\n",
-    "  # Loop through the frames and preprocess them\n",
-    "  for frame in frames:\n",
-    "    # Resize and center crop the frame to 224x224 pixels\n",
-    "    frame = torchvision.transforms.Resize(224)(frame)\n",
-    "    frame = torchvision.transforms.CenterCrop(224)(frame)\n",
-    "\n",
-    "    # Convert the frame to a tensor and normalize it\n",
-    "    frame = torchvision.transforms.ToTensor()(frame)\n",
-    "    frame = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))(frame)\n",
-    "\n",
-    "    # Append the frame tensor to the list\n",
-    "    tensors.append(frame)\n",
-    "\n",
-    "  # Stack the tensors into a batch\n",
-    "  batch = torch.stack(tensors)\n",
-    "\n",
-    "  # Encode the batch using CLIP and get the image features\n",
-    "  with torch.no_grad():\n",
-    "    image_features = model.encode_image(batch)\n",
-    "\n",
-    "  # Return the image features tensor\n",
-    "  return image_features\"\"\"\n",
-    "\n",
-    "def encode_frames(frames):\n",
-    "  # Initialize an empty list to store the tensors\n",
-    "  tensors = []\n",
-    "\n",
-    "  # Loop through the frames and preprocess them using CLIP\n",
-    "  for frame in frames:\n",
-    "    # Convert the frame to a tensor\n",
-    "    frame = torchvision.transforms.ToTensor()(frame)\n",
-    "\n",
-    "    # Preprocess the frame using CLIP\n",
-    "    frame = preprocess(frame)\n",
-    "\n",
-    "    # Append the frame tensor to the list\n",
-    "    tensors.append(frame)\n",
-    "\n",
-    "  # Stack the tensors into a batch\n",
-    "  batch = torch.stack(tensors)\n",
-    "\n",
-    "  # Encode the batch using CLIP and get the image features\n",
-    "  with torch.no_grad():\n",
-    "    image_features = model.encode_image(batch)\n",
-    "\n",
-    "  # Return the image features tensor\n",
-    "  return image_features\n",
-    "\n",
-    "# Define a function to concatenate tensors along a dimension\n",
-    "def concatenate_tensors(tensors, dim):\n",
-    "  # Stack the tensors along the specified dimension\n",
-    "  concatenated_tensor = torch.stack(tensors, dim=dim)\n",
-    "\n",
-    "  # Return the concatenated tensor\n",
-    "  return concatenated_tensor\n",
-    "\n",
-    "# Loop through the videos in the folder\n",
-    "for video_file in os.listdir(video_path):\n",
-    "  # Extract x frames per minute from the video\n",
-    "  frames = extract_frames(video_path + video_file, x)\n",
-    "\n",
-    "  # Encode the frames using CLIP\n",
-    "  image_features = encode_frames(frames)\n",
-    "\n",
-    "  # Concatenate the image features along dimension 1 to make a 2D tensor\n",
-    "  output_tensor = concatenate_tensors(image_features, dim=1)\n",
-    "\n",
-    "  # Save the output tensor to a file with the same name as the video file\n",
-    "  torch.save(output_tensor, output_path + video_file + \".pt\")"
    ]
   }
  ],
