--- a/datasaver.ipynb
+++ b/datasaver.ipynb
@@ -69,7 +69,7 @@
     "    to_pil = torchvision.transforms.ToPILImage()\n",
     "    for i in range(0, num_frames, interval):\n",
     "      frames.append(to_pil(video[i].squeeze(0)))\n",
-    "      print(to_pil(video[i].squeeze(0)).shape)\n",
+    "      # print(np.shape(to_pil(video[i].squeeze(0))))\n",
     "    \n",
     "\n",
     "    return frames"
@@ -89,9 +89,11 @@
     "    for i in range(0,len(frames)): #should this be len()+1???\n",
     "        frame = preprocess(frames[i]).unsqueeze(0).to(device)\n",
     "        tensors.append(frame)\n",
+    "        # print(frame.shape)\n",
     "\n",
-    "    preprocess_batch = torch.stack(tensors)\n",
+    "    preprocess_batch = torch.cat(tensors, dim = 0)\n",
     "    preprocess_batch = preprocess_batch.to(device)\n",
+    "    print(preprocess_batch.shape)\n",
     "\n",
     "    return preprocess_batch\n"
    ]
@@ -111,9 +113,9 @@
     "        print(t.shape) \n",
     "\n",
     "    # get the z values for each tensor\n",
-    "    z_values = [t.shape[2] for t in tensors]\n",
+    "    z_values = [t.shape[0] for t in tensors]\n",
     "\n",
-    "    joined = torch.cat(tensors, dim=2)\n",
+    "    joined = torch.cat(tensors, dim=0)\n",
     "\n",
     "    with torch.no_grad():\n",
     "            image_features = model.encode_image(joined)\n",
@@ -121,7 +123,7 @@
     "    image_features.to(device)\n",
     "\n",
     "    #gets z values and splits them back to video stacks\n",
-    "    split = torch.split(image_features, z_values, dim=2)\n",
+    "    split = torch.split(image_features, z_values, dim=0)\n",
     "\n",
     "    return split\n",
     "\n",
@@ -145,21 +147,84 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\dhavi\\anaconda3\\envs\\clipcap\\Lib\\site-packages\\torchvision\\io\\video.py:161: UserWarning: The pts_unit 'pts' gives wrong results. Please use pts_unit 'sec'.\n",
-      "  warnings.warn(\"The pts_unit 'pts' gives wrong results. Please use pts_unit 'sec'.\")\n",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\n"
+      "  warnings.warn(\"The pts_unit 'pts' gives wrong results. Please use pts_unit 'sec'.\")\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "shape",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 3, 224, 224])\n",
+      "torch.Size([4, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([5, 3, 224, 224])\n",
+      "torch.Size([4, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:12<00:24, 12.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([7, 3, 224, 224])\n",
+      "torch.Size([5, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([2, 3, 224, 224])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [00:17<00:35, 17.94s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([7, 3, 224, 224])\n",
+      "torch.Size([5, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n",
+      "torch.Size([2, 3, 224, 224])\n",
+      "torch.Size([6, 3, 224, 224])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m \u001b[39mid\u001b[39m \u001b[39min\u001b[39;00m batch_ids:\n\u001b[0;32m     16\u001b[0m     \u001b[39m# get the video file name with the corresponding id\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     video_file \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mvideo_path\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mid\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m.mp4\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 18\u001b[0m     batch\u001b[39m.\u001b[39mappend(preprocess_frames(extract_frames(video_file)))\n\u001b[0;32m     20\u001b[0m tokenised_batch \u001b[39m=\u001b[39m CLIPtokenise(batch)\n\u001b[0;32m     22\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(batch_ids)):\n",
-      "Cell \u001b[1;32mIn[3], line 12\u001b[0m, in \u001b[0;36mextract_frames\u001b[1;34m(video_file)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, num_frames, interval):\n\u001b[0;32m     11\u001b[0m   frames\u001b[39m.\u001b[39mappend(to_pil(video[i]\u001b[39m.\u001b[39msqueeze(\u001b[39m0\u001b[39m)))\n\u001b[1;32m---> 12\u001b[0m   \u001b[39mprint\u001b[39m(to_pil(video[i]\u001b[39m.\u001b[39msqueeze(\u001b[39m0\u001b[39m))\u001b[39m.\u001b[39mshape)\n\u001b[0;32m     15\u001b[0m \u001b[39mreturn\u001b[39;00m frames\n",
-      "File \u001b[1;32mc:\\Users\\dhavi\\anaconda3\\envs\\clipcap\\Lib\\site-packages\\PIL\\Image.py:529\u001b[0m, in \u001b[0;36mImage.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    527\u001b[0m     deprecate(\u001b[39m\"\u001b[39m\u001b[39mImage categories\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mis_animated\u001b[39m\u001b[39m\"\u001b[39m, plural\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m    528\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_category\n\u001b[1;32m--> 529\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: shape"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\dhavi\\anaconda3\\envs\\clipcap\\Lib\\site-packages\\pandas\\core\\indexes\\range.py:391\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m    390\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 391\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_range\u001b[39m.\u001b[39mindex(new_key)\n\u001b[0;32m    392\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "\u001b[1;31mValueError\u001b[0m: 0 is not in range",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m tokenised_batch \u001b[39m=\u001b[39m CLIPtokenise(batch)\n\u001b[0;32m     22\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(batch_ids)):\n\u001b[1;32m---> 23\u001b[0m     torch\u001b[39m.\u001b[39msave(tokenised_batch[j], \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m./video_tensors/\u001b[39m\u001b[39m{\u001b[39;00mbatch_ids[j]\u001b[39m}\u001b[39;00m\u001b[39m.pt\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\dhavi\\anaconda3\\envs\\clipcap\\Lib\\site-packages\\pandas\\core\\series.py:981\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    978\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[key]\n\u001b[0;32m    980\u001b[0m \u001b[39melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m--> 981\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_value(key)\n\u001b[0;32m    983\u001b[0m \u001b[39mif\u001b[39;00m is_hashable(key):\n\u001b[0;32m    984\u001b[0m     \u001b[39m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[0;32m    985\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    986\u001b[0m         \u001b[39m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\dhavi\\anaconda3\\envs\\clipcap\\Lib\\site-packages\\pandas\\core\\series.py:1089\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[1;34m(self, label, takeable)\u001b[0m\n\u001b[0;32m   1086\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[label]\n\u001b[0;32m   1088\u001b[0m \u001b[39m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[1;32m-> 1089\u001b[0m loc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mget_loc(label)\n\u001b[0;32m   1090\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39m_get_values_for_loc(\u001b[39mself\u001b[39m, loc, label)\n",
+      "File \u001b[1;32mc:\\Users\\dhavi\\anaconda3\\envs\\clipcap\\Lib\\site-packages\\pandas\\core\\indexes\\range.py:393\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m    391\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_range\u001b[39m.\u001b[39mindex(new_key)\n\u001b[0;32m    392\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m--> 393\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m    394\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n\u001b[0;32m    395\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 0"
      ]
     }
    ],
