increase frames to 120/min

--- a/main.ipynb
+++ b/main.ipynb
@@ -86,7 +86,7 @@
     "        self.tokenizer = GPT2Tokenizer.from_pretrained(gpt2_type)\n",
     "        self.prefix_length = prefix_length\n",
     "        self.normalize_prefix = normalize_prefix\n",
-    "        with open(data_path, 'rb') as f:\n",
+    "        with open(data_path, 'rb') as f: #Change\n",
     "            all_data = pickle.load(f)\n",
     "        print(\"Data size is %0d\" % len(all_data[\"clip_embedding\"]))\n",
     "        sys.stdout.flush()\n",
