--- a/main.ipynb
+++ b/main.ipynb
@@ -12,21 +12,12 @@
     "from torchvision import datasets\n",
     "from torchvision.transforms import ToTensor\n",
     "import numpy as np\n",
-    "\n",
-    "import torch.nn.functional as nnf\n",
-    "import sys\n",
-    "from typing import Tuple, List, Union, Optional\n",
-    "\n",
-    "import clip\n",
+    "import pandas as pd\n",
+    "import torch.nn.functional as F\n",
     "import os\n",
     "from tqdm import tqdm, trange\n",
-    "\n",
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel, AdamW, get_linear_schedule_with_warmup\n",
-    "\n",
-    "import skimage.io as io\n",
-    "import PIL.Image\n",
-    "from IPython.display import Image \n",
-    "from enum import Enum"
+    "from transformers import GPT2Tokenizer, GPT2LMHeadModel, AdamW\n",
+    "\n"
    ]
   },
   {
@@ -52,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data loaders\n"
+    "#Data loaders Pytorch dataset class\n",
+    "\n"
    ]
   },
   {
@@ -178,34 +170,91 @@
     "# Your training loop here\n",
     "# where you calculate the loss as per your requirement and perform backpropagation\n",
     "\n",
-    "num_epochs = 10\n",
     "\n",
-    "for epoch in range(num_epochs):\n",
+    "def Train(dataset: \"Add dataset\", model: MyModel, args,\n",
+    "               lr: float = 2e-5, warmup_steps: int = 5000, output_dir: str = \".\", output_prefix: str = \"\"):\n",
+    "\n",
+    "    num_epochs = 10\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train()\n",
+    "        for i, (input_data, target) in enumerate(train_loader):\n",
+    "            input_data, target = input_data.to(device), target.to(device)\n",
+    "\n",
+    "            # Forward pass through your model\n",
+    "            output = model(input_data)\n",
+    "\n",
+    "            # Tokenize the output of your model\n",
+    "            tokens = gpt2_tokenizer(output.tolist(), return_tensors='pt').to(device)\n",
+    "\n",
+    "            # Forward pass through GPT-2 model\n",
+    "            gpt2_output = gpt2_model(tokens).last_hidden_state\n",
+    "\n",
+    "            # Remove the first 32 tokens from the GPT-2 output\n",
+    "            gpt2_output = gpt2_output[:, 32:]\n",
+    "\n",
+    "            # Calculate loss\n",
+    "            loss = loss_fn(gpt2_output, target)\n",
+    "\n",
+    "            # Backpropagate loss and update parameters\n",
+    "            optimizer = AdamW(model.parameters(), lr=lr)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "        print(f'Epoch: {epoch}, Loss: {loss.item()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(dataset: ClipCocoDataset, model: ClipCaptionModel, args,\n",
+    "          lr: float = 2e-5, warmup_steps: int = 5000, output_dir: str = \".\", output_prefix: str = \"\"):\n",
+    "\n",
+    "    device = torch.device('cuda:0')\n",
+    "    batch_size = args.bs\n",
+    "    epochs = args.epochs\n",
+    "    if not os.path.exists(output_dir):\n",
+    "        os.makedirs(output_dir)\n",
+    "    model = model.to(device)\n",
     "    model.train()\n",
-    "    for i, (input_data, target) in enumerate(train_loader):\n",
-    "        input_data, target = input_data.to(device), target.to(device)\n",
-    "\n",
-    "        # Forward pass through your model\n",
-    "        output = model(input_data)\n",
-    "\n",
-    "        # Tokenize the output of your model\n",
-    "        tokens = gpt2_tokenizer(output.tolist(), return_tensors='pt').to(device)\n",
-    "\n",
-    "        # Forward pass through GPT-2 model\n",
-    "        gpt2_output = gpt2_model(tokens).last_hidden_state\n",
-    "\n",
-    "        # Remove the first 32 tokens from the GPT-2 output\n",
-    "        gpt2_output = gpt2_output[:, 32:]\n",
-    "\n",
-    "        # Calculate loss\n",
-    "        loss = loss_fn(gpt2_output, target)\n",
-    "\n",
-    "        # Backpropagate loss and update parameters\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "    print(f'Epoch: {epoch}, Loss: {loss.item()}')"
+    "    optimizer = AdamW(model.parameters(), lr=lr)\n",
+    "    train_dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
+    "    scheduler = get_linear_schedule_with_warmup(\n",
+    "        optimizer, num_warmup_steps=warmup_steps, num_training_steps=epochs * len(train_dataloader)\n",
+    "    )\n",
+    "    # save_config(args)\n",
+    "    for epoch in range(epochs):\n",
+    "        print(f\">>> Training epoch {epoch}\")\n",
+    "        sys.stdout.flush()\n",
+    "        progress = tqdm(total=len(train_dataloader), desc=output_prefix)\n",
+    "        for idx, (tokens, mask, prefix) in enumerate(train_dataloader):\n",
+    "            model.zero_grad()\n",
+    "            tokens, mask, prefix = tokens.to(device), mask.to(device), prefix.to(device, dtype=torch.float32)\n",
+    "            outputs = model(tokens, prefix, mask)\n",
+    "            logits = outputs.logits[:, dataset.prefix_length - 1: -1]\n",
+    "            loss = nnf.cross_entropy(logits.reshape(-1, logits.shape[-1]), tokens.flatten(), ignore_index=0)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            scheduler.step()\n",
+    "            optimizer.zero_grad()\n",
+    "            progress.set_postfix({\"loss\": loss.item()})\n",
+    "            progress.update()\n",
+    "            if (idx + 1) % 10000 == 0:\n",
+    "                torch.save(\n",
+    "                    model.state_dict(),\n",
+    "                    os.path.join(output_dir, f\"{output_prefix}_latest.pt\"),\n",
+    "                )\n",
+    "        progress.close()\n",
+    "        if epoch % args.save_every == 0 or epoch == epochs - 1:\n",
+    "            torch.save(\n",
+    "                model.state_dict(),\n",
+    "                os.path.join(output_dir, f\"{output_prefix}-{epoch:03d}.pt\"),\n",
+    "            )\n",
+    "    return model"
    ]
   }
  ],
