--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-positonal interpolation??
+###Producing Video Descriptions with minimal data whilst preserving grammar by utilizing pretrained Open AI GPT-2 and CLIP
